--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  max-width: 500px;
+  max-width: 100%;
   margin: 50px auto;
   padding: 20px;
   border: 1px solid #ddd;
@@ -37,13 +37,22 @@ button:hover {
 
 .event-option {
   margin-bottom: 10px;
+  margin-left: 25px;
+  float: left;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 10px;
+  
+  
 }
 
 .subcategories {
-  margin-left: 20px;
+  margin-left: 10px;
   margin-top: 5px;
+  border-left: 2px solid #ddd;
 }
 
 .subcategory-option {
   display: block;
+  margin-top: 5px;
 }
