--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  max-width: 100%;
+  max-width: 80%;
   margin: 50px auto;
   padding: 20px;
   border: 1px solid #ddd;
@@ -16,7 +16,14 @@ label {
   margin-bottom: 5px;
 }
 
-input[type='date'],
+input[type='date']{
+  width: 98%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 button {
   width: 100%;
   padding: 8px;
@@ -36,7 +43,8 @@ button:hover {
 }
 
 .event-option {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
   margin-left: 25px;
   float: left;
   display: grid;
