--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,28 @@
+body {
+
+  background-image: url('./skyline.svg');
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  /* or contain, depending on your needs */
+  background-repeat: repeat-y;
+  /* prevents tiling */
+  background-position: center;
+  /* centers the image */
+
+  /* background-color: #b71b1b; */
+}
+
 .App {
   max-width: 80%;
   margin: 50px auto;
   padding: 20px;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd;
+  border: 1px solid rgba(255, 0, 0, 0.5); */
+
   border-radius: 8px;
-  background-color: #f9f9f9;
+
+  background-color: rgba(211, 214, 233, 0.9);
 }
 
 .form-group {
@@ -16,7 +34,7 @@ label {
   margin-bottom: 5px;
 }
 
-input[type='date']{
+input[type='date'] {
   width: 98%;
   padding: 8px;
   margin-top: 5px;
@@ -50,8 +68,8 @@ button:hover {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 10px;
-  
-  
+
+
 }
 
 .subcategories {
@@ -68,6 +86,7 @@ button:hover {
 .button-group {
   clear: both;
   width: 100;
+  flex-wrap: wrap;
   display: flex;
   gap: 10px;
   margin-top: 10px;
@@ -75,7 +94,7 @@ button:hover {
 
 .btn {
   padding: 8px;
-  
+
   border: 1px solid #ccc;
   border-radius: 4px;
   cursor: pointer;
@@ -83,19 +102,24 @@ button:hover {
 
 .btn-secondary {
   background-color: #f0f0f0;
-  
+
   color: #333;
   flex: 1;
 }
 
 .btn-primary {
   background-color: #007bff;
-  
+
   color: #fff;
   flex: 3;
 }
 
-.btn:hover {
+.btn-primary:hover {
+  background-color: #6b7796;
+}
+
+.btn-secondary:hover {
+  background-color: #007bff;
   opacity: 0.8;
 }
 
@@ -106,4 +130,8 @@ button:hover {
   height: 15px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+input[type="checkbox"]:checked {
+  accent-color: #0056b3;
 }
