--- a/client/src/App.css
+++ b/client/src/App.css
@@ -193,3 +193,17 @@ input[type="checkbox"]:checked {
   margin-left: 50%;
   margin-right: 50%;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height to ensure vertical centering */
+  flex-direction: column;
+}
+
+.loading p {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #123abc;
+}
